# festival-stories-collector

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.py
